[gd_scene load_steps=13 format=3 uid="uid://dp7jdk5hksqyw"]

[ext_resource type="Script" path="res://characters/player.gd" id="1_vfs3i"]
[ext_resource type="Texture2D" uid="uid://cirydnnuawr80" path="res://light.png" id="2_niumg"]
[ext_resource type="AudioStream" uid="uid://c5637qrydm4yb" path="res://characters/hurt.mp3" id="3_d513c"]
[ext_resource type="Texture2D" uid="uid://cpawvfp0qegjy" path="res://characters/health_bar_background.png" id="4_oaovj"]
[ext_resource type="Texture2D" uid="uid://b5fax5sdpu328" path="res://characters/health_bar.png" id="5_51ktu"]
[ext_resource type="Texture2D" uid="uid://d1n484wg4ivuj" path="res://characters/mana_bar.png" id="6_e2jqn"]
[ext_resource type="Script" path="res://characters/player_inventory.gd" id="7_ax8ma"]
[ext_resource type="Texture2D" uid="uid://dpmd72e6ptcph" path="res://characters/xp_bar_background.png" id="8_ghg5a"]
[ext_resource type="Texture2D" uid="uid://cgw0xav55ee5g" path="res://characters/xp_bar.png" id="9_b642c"]
[ext_resource type="Texture2D" uid="uid://cr0nt5qcjuye1" path="res://characters/heal.png" id="10_x00ub"]
[ext_resource type="Texture2D" uid="uid://cvw8ugcmardiy" path="res://characters/heal_empty.png" id="11_crwrq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0d6cu"]
radius = 30.0

[node name="player" type="CharacterBody2D"]
scale = Vector2(2, 2)
motion_mode = 1
floor_block_on_wall = false
script = ExtResource("1_vfs3i")

[node name="camera" type="Camera2D" parent="."]

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0d6cu")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-4, 0)
shadow_enabled = true
texture = ExtResource("2_niumg")
texture_scale = 2.5

[node name="walk_sprite" type="Sprite2D" parent="."]
visible = false
hframes = 9
vframes = 8
region_rect = Rect2(0, 0, 100, 100)

[node name="idle_sprite" type="Sprite2D" parent="."]
vframes = 8

[node name="idle_attack_sprite" type="Sprite2D" parent="."]
visible = false
vframes = 8

[node name="walk_attack_sprite" type="Sprite2D" parent="."]
visible = false
hframes = 9
vframes = 8

[node name="hurt_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_d513c")

[node name="ui" type="CanvasLayer" parent="."]

[node name="health_bar" type="TextureProgressBar" parent="ui"]
anchors_preset = -1
anchor_right = 0.501
offset_right = -150.152
offset_bottom = 40.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("4_oaovj")
texture_progress = ExtResource("5_51ktu")

[node name="mana_bar" type="TextureProgressBar" parent="ui"]
anchors_preset = -1
anchor_right = 0.501
offset_top = 40.0
offset_right = -150.152
offset_bottom = 80.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("4_oaovj")
texture_progress = ExtResource("6_e2jqn")

[node name="tabs" type="TabContainer" parent="ui"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -300.0
offset_right = 383.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00068, 1)
tab_alignment = 1
current_tab = 3
clip_tabs = false
script = ExtResource("7_ax8ma")

[node name="Character" type="ColorRect" parent="ui/tabs"]
visible = false
layout_mode = 2
color = Color(0.442066, 0, 0.0822867, 1)
metadata/_tab_index = 0

[node name="Skills" type="ColorRect" parent="ui/tabs"]
visible = false
layout_mode = 2
color = Color(0.290871, 0.116077, 0.444379, 1)
metadata/_tab_index = 1

[node name="Inventory" type="ColorRect" parent="ui/tabs"]
visible = false
layout_mode = 2
color = Color(0.123023, 0.151242, 0.553843, 1)
metadata/_tab_index = 2

[node name="GridContainer" type="GridContainer" parent="ui/tabs/Inventory"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 759.0
offset_bottom = 568.0
columns = 12

[node name="ColorRect" type="ColorRect" parent="ui/tabs/Inventory/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="ui/tabs/Inventory/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="ColorRect3" type="ColorRect" parent="ui/tabs/Inventory/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="ColorRect4" type="ColorRect" parent="ui/tabs/Inventory/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="ColorRect5" type="ColorRect" parent="ui/tabs/Inventory/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="ColorRect6" type="ColorRect" parent="ui/tabs/Inventory/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="ColorRect7" type="ColorRect" parent="ui/tabs/Inventory/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="ColorRect8" type="ColorRect" parent="ui/tabs/Inventory/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="ColorRect9" type="ColorRect" parent="ui/tabs/Inventory/GridContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="Map" type="ColorRect" parent="ui/tabs"]
clip_contents = true
layout_mode = 2
color = Color(0.217701, 0.217701, 0.217701, 1)
metadata/_tab_index = 3

[node name="cam" type="Camera2D" parent="ui/tabs/Map"]
position = Vector2(383.739, 272)

[node name="player" type="ColorRect" parent="ui/tabs/Map/cam"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 0
color = Color(1, 0, 0, 1)

[node name="xp_bar" type="TextureProgressBar" parent="ui"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 257.0
offset_right = 300.0
offset_bottom = 287.0
grow_horizontal = 2
grow_vertical = 2
nine_patch_stretch = true
texture_under = ExtResource("8_ghg5a")
texture_progress = ExtResource("9_b642c")

[node name="level" type="Label" parent="ui"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -366.0
offset_top = 264.0
offset_right = -326.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
text = "LVL 1"

[node name="health" type="Node2D" parent="ui"]
position = Vector2(72, 160)
scale = Vector2(4, 4)

[node name="empty" type="Sprite2D" parent="ui/health"]
texture = ExtResource("11_crwrq")

[node name="full" type="Sprite2D" parent="ui/health"]
texture = ExtResource("10_x00ub")

[node name="amount" type="Label" parent="ui/health"]
offset_left = 6.0
offset_top = -10.0
offset_right = 30.0
offset_bottom = 6.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 16
text = "III"
